[SRSDriver] - Implement maps, order detail, submit signature

--- a/SRSDriver/Info.plist
+++ b/SRSDriver/Info.plist
@@ -39,5 +39,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Show your location on Map</string>
 </dict>
 </plist>
