[SRSDriver] - Implement list order items. - Integrate scanning bar code

--- a/SRSDriver/Info.plist
+++ b/SRSDriver/Info.plist
@@ -45,5 +45,7 @@
 	<string>What will be shown?</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Post your image</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Using your camera to scan bar code</string>
 </dict>
 </plist>
