--- a/SRSDriver/Shared/Webservices/configs.plist
+++ b/SRSDriver/Shared/Webservices/configs.plist
@@ -32,5 +32,11 @@
 	<string>/backend-api/v1/mobile/orders/%@/items</string>
 	<key>UPDATE_NOTIFICATION_TOKEN</key>
 	<string>/backend-api/v1/notificationtokens/notification</string>
+	<key>CREATE_NEW_MESSAGE</key>
+	<string>/backend-api/v1/messages</string>
+	<key>GET_COUNT_MESSAGE_NUMBER</key>
+	<string>/backend-api/v1/messages/count-message?type_message=%@&amp;route_id=%@</string>
+	<key>GET_LIST_NOTIFICATIONS</key>
+	<string>/backend-api/v1/messages/list-message?page=1&amp;limit=100&amp;route_id=%@</string>
 </dict>
 </plist>
