--- a/SRSDriver/Supporting Files/GoogleService-Info.plist
+++ b/SRSDriver/Supporting Files/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>287219827117-co14rov8lb7t1g1jdvjtqmfnsdd5sp5o.apps.googleusercontent.com</string>
+	<string>717706361926-d21rbbb6q2a2siqc24m6026gmlc58un3.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.287219827117-co14rov8lb7t1g1jdvjtqmfnsdd5sp5o</string>
+	<string>com.googleusercontent.apps.717706361926-d21rbbb6q2a2siqc24m6026gmlc58un3</string>
 	<key>API_KEY</key>
-	<string>AIzaSyA78Vwx8hG9rGi32047UH5XJwm0FErom_Y</string>
+	<string>AIzaSyCdoiFmfnVLH4c4xMVHum1GwQrDnqnuC90</string>
 	<key>GCM_SENDER_ID</key>
-	<string>287219827117</string>
+	<string>717706361926</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.seldatinc.SRSDriver</string>
 	<key>PROJECT_ID</key>
-	<string>srs-masof-dev</string>
+	<string>sdms-masof-dev</string>
 	<key>STORAGE_BUCKET</key>
-	<string>srs-masof-dev.appspot.com</string>
+	<string>sdms-masof-dev.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:287219827117:ios:a61832431cc1e874</string>
+	<string>1:717706361926:ios:a61832431cc1e874</string>
 	<key>DATABASE_URL</key>
-	<string>https://srs-masof-dev.firebaseio.com</string>
+	<string>https://sdms-masof-dev.firebaseio.com</string>
 </dict>
 </plist>
