--- a/SRSDriver/Shared/Webservices/configs_masof.plist
+++ b/SRSDriver/Shared/Webservices/configs_masof.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BASE_URL</key>
-	<string>https://apigw.seldatdirect.com/demo/sdms-masof/api</string>
+	<string>https://apigw.seldatdirect.com/demo/srs/api</string>
 	<key>LOGIN</key>
 	<string>/master-service/v1/login</string>
 	<key>GET_ORDERS</key>
