--- a/SRSDriver/Shared/Webservices/configs_masof.plist
+++ b/SRSDriver/Shared/Webservices/configs_masof.plist
@@ -3,6 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>BASE_URL</key>
+	<string>https://apigw.seldatdirect.com/demo/sdms-masof/api</string>
+	<key>BASE_URL_DEV</key>
 	<string>https://apigw.seldatdirect.com/dev/sdms-masof/api</string>
 	<key>LOGIN</key>
 	<string>/master-service/v1/login</string>
@@ -42,5 +44,9 @@
 	<string>/backend-api/v1/routes/%@</string>
 	<key>READ_MESSAGE</key>
 	<string>/backend-api/v1/messages/%@</string>
+	<key>CHECK_TOKEN</key>
+	<string>authentication/users/token</string>
+	<key>CHANGE_PASSWORD</key>
+	<string>/master-service/v1/users/change-password</string>
 </dict>
 </plist>
