[DMS][Core] - update trước khi phân nhánh.

--- a/SRSDriver/Supporting Files/DMSDriver_Core/configs_dms.plist
+++ b/SRSDriver/Supporting Files/DMSDriver_Core/configs_dms.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BASE_URL</key>
-	<string>https://apigw.seldatdirect.com/demo/sdms/api</string>
+	<string>https://apigw.seldatdirect.com/staging/sdms/api</string>
 	<key>BASE_URL_DEV</key>
 	<string>https://apigw.seldatdirect.com/dev/sdms/api</string>
 	<key>LOGIN</key>
