[DMS][Masof] - cập nhật tính năng khi có push notification "Missing cooler", hiển thị popup thông báo và gửi trả.

--- a/SRSDriver/Supporting Files/DMSDriver_Masof/configs_masof.plist
+++ b/SRSDriver/Supporting Files/DMSDriver_Masof/configs_masof.plist
@@ -57,6 +57,6 @@
 	<key>GET_ALERT_DETAIL</key>
 	<string>/backend-api/v1/alert/my-list</string>
 	<key>RESOLVE_ALERT</key>
-	<string>/backend-api/v1/alert-management/%@?comment=%@</string>
+	<string>/backend-api/v1/alert-management/%@</string>
 </dict>
 </plist>
