[DMS][Masof] - cập nhật tính năng khi có push notification "Missing cooler", hiển thị popup thông báo và gửi trả.

--- a/SRSDriver/Supporting Files/DMSDriver_Masof/configs_masof.plist
+++ b/SRSDriver/Supporting Files/DMSDriver_Masof/configs_masof.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BASE_URL</key>
-	<string>https://apigw.seldatdirect.com/demo/sdms-masof/api</string>
+	<string>https://apigw-masof.seldatdirect.com/live/sdms-masof/api</string>
 	<key>BASE_URL_DEV</key>
 	<string>https://apigw.seldatdirect.com/dev/sdms-masof/api</string>
 	<key>LOGIN</key>
