--- a/SRSDriver/Supporting Files/DMSDriver_Masof/GoogleService-Info.plist
+++ b/SRSDriver/Supporting Files/DMSDriver_Masof/GoogleService-Info.plist
@@ -1,40 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
-	<string>ca-app-pub-3940256099942544/2934735716</string>
-	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
-	<string>ca-app-pub-3940256099942544/4411468910</string>
-	<key>CLIENT_ID</key>
-	<string>717706361926-d21rbbb6q2a2siqc24m6026gmlc58un3.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.717706361926-d21rbbb6q2a2siqc24m6026gmlc58un3</string>
-	<key>API_KEY</key>
-	<string>AIzaSyCdoiFmfnVLH4c4xMVHum1GwQrDnqnuC90</string>
-	<key>GCM_SENDER_ID</key>
-	<string>717706361926</string>
-	<key>PLIST_VERSION</key>
-	<string>1</string>
-	<key>BUNDLE_ID</key>
-	<string>com.seldatinc.SRSDriver</string>
-	<key>PROJECT_ID</key>
-	<string>sdms-masof-dev</string>
-	<key>STORAGE_BUCKET</key>
-	<string>sdms-masof-dev.appspot.com</string>
-	<key>IS_ADS_ENABLED</key>
-	<true></true>
-	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
-	<key>IS_APPINVITE_ENABLED</key>
-	<false></false>
-	<key>IS_GCM_ENABLED</key>
-	<true></true>
-	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
-	<key>GOOGLE_APP_ID</key>
-	<string>1:717706361926:ios:a61832431cc1e874</string>
-	<key>DATABASE_URL</key>
-	<string>https://sdms-masof-dev.firebaseio.com</string>
-</dict>
+    <dict>
+        <key>AD_UNIT_ID_FOR_BANNER_TEST</key>
+        <string>ca-app-pub-3940256099942544/2934735716</string>
+        <key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
+        <string>ca-app-pub-3940256099942544/4411468910</string>
+        <key>CLIENT_ID</key>
+        <string>990125754465-gpf07r7h082j3gmh8fdqt9vp7t8lju8j.apps.googleusercontent.com</string>
+        <key>REVERSED_CLIENT_ID</key>
+        <string>com.googleusercontent.apps.990125754465-gpf07r7h082j3gmh8fdqt9vp7t8lju8j</string>
+        <key>GCM_SENDER_ID</key>
+        <string>990125754465</string>
+        <key>PLIST_VERSION</key>
+        <string>1</string>
+        <key>BUNDLE_ID</key>
+        <string>com.seldatinc.SRSDriver</string>
+        <key>PROJECT_ID</key>
+        <string>sdms-masof-c1a7e</string>
+        <key>STORAGE_BUCKET</key>
+        <string>sdms-masof-c1a7e.appspot.com</string>
+        <key>IS_ADS_ENABLED</key>
+        <true></true>
+        <key>IS_ANALYTICS_ENABLED</key>
+        <false></false>
+        <key>IS_APPINVITE_ENABLED</key>
+        <false></false>
+        <key>IS_GCM_ENABLED</key>
+        <true></true>
+        <key>IS_SIGNIN_ENABLED</key>
+        <true></true>
+        <key>GOOGLE_APP_ID</key>
+        <string>1:990125754465:ios:a61832431cc1e874</string>
+        <key>DATABASE_URL</key>
+        <string>https://sdms-masof-c1a7e.firebaseio.com</string>
+    </dict>
 </plist>
