--- a/SRSDriver/Supporting Files/DMSDriver_Core/MainConfigs.plist
+++ b/SRSDriver/Supporting Files/DMSDriver_Core/MainConfigs.plist
@@ -3,8 +3,10 @@
 <plist version="1.0">
 <dict>
 	<key>BASE_URL</key>
-	<string>https://apigw.seldatdirect.com/staging/sdms/api</string>
+	<string>https://apigw.seldatdirect.com/dev/dms/99cents/api</string>
 	<key>BASE_URL_DEV</key>
-	<string>https://apigw.seldatdirect.com/dev/sdms/api</string>
+	<string>https://apigw.seldatdirect.com/dev/dms/99cents/api</string>
+	<key>New item</key>
+	<string></string>
 </dict>
 </plist>
