--- a/SRSDriver/Supporting Files/DMSDriver_Taavura/MainConfigs.plist
+++ b/SRSDriver/Supporting Files/DMSDriver_Taavura/MainConfigs.plist
@@ -6,5 +6,7 @@
 	<string>https://apigw.seldatdirect.com/dev/dms/taavura/api</string>
 	<key>BASE_URL_DEV</key>
 	<string>https://apigw.seldatdirect.com/dev/dms/taavura/api</string>
+	<key>TrackingTimeInterval</key>
+	<integer>0</integer>
 </dict>
 </plist>
