still duplicatied call tracking

--- a/SRSDriver/Supporting Files/DMSDriver_Core/Info.plist
+++ b/SRSDriver/Supporting Files/DMSDriver_Core/Info.plist
@@ -26,8 +26,13 @@
 	<true/>
 	<key>NSCameraUsageDescription</key>
 	<string>Using your camera to scan bar code</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Show your location on Map</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>This app needs your current location</string>
+    
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>This app needs your current location</string>
+<!--    <key>NSLocationWhenInUseUsageDescription</key>-->
+<!--    <string>Show your location on Map</string>-->
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Post your image</string>
 	<key>UIBackgroundModes</key>
