--- a/SRSDriver/Shared/Services/GlobalServices/ServicesConfigs.plist
+++ b/SRSDriver/Shared/Services/GlobalServices/ServicesConfigs.plist
@@ -56,5 +56,7 @@
 	<string>/backend-api/v1/alert/my-list</string>
 	<key>RESOLVE_ALERT</key>
 	<string>/backend-api/v1/alert-management/%@?comment=%@</string>
+	<key>UPDATE_DRIVER_LOCATION</key>
+	<string>/gps-tracking/update-driver-loc</string>
 </dict>
 </plist>
