--- a/SRSDriver/Shared/Services/GlobalServices/ServicesConfigs.plist
+++ b/SRSDriver/Shared/Services/GlobalServices/ServicesConfigs.plist
@@ -58,5 +58,9 @@
 	<string>/backend-api/v1/alert-management/%@?comment=%@</string>
 	<key>UPDATE_DRIVER_LOCATION</key>
 	<string>/gps-tracking/update-driver-loc</string>
+	<key>GET_USERID_BY_TOKEN</key>
+	<string>/authentication/users/token</string>
+	<key>GET_USER_PROFILE</key>
+	<string>/auth/v1/user/profile</string>
 </dict>
 </plist>
