--- a/SRSDriver/Supporting Files/DMSDriver_Core/Info.plist
+++ b/SRSDriver/Supporting Files/DMSDriver_Core/Info.plist
@@ -34,6 +34,7 @@
 	<string>Post your image</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>location</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
