--- a/SRSDriver/Supporting Files/DMSDriver_Core/MainConfigs.plist
+++ b/SRSDriver/Supporting Files/DMSDriver_Core/MainConfigs.plist
@@ -6,6 +6,8 @@
 	<string>https://apigw.seldatdirect.com/dev/dms/99cents/api</string>
 	<key>BASE_URL_DEV</key>
 	<string>https://apigw.seldatdirect.com/dev/dms/99cents/api</string>
+	<key>BASE_URL_GOOGLE_MAP</key>
+	<string>https://maps.googleapis.com/maps/api</string>
 	<key>TrackingTimeInterval</key>
 	<integer>60</integer>
 </dict>
