--- a/SRSDriver/Supporting Files/DMSDriver_Core/GoogleService-Info.plist
+++ b/SRSDriver/Supporting Files/DMSDriver_Core/GoogleService-Info.plist
@@ -1,40 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-    <dict>
-        <key>AD_UNIT_ID_FOR_BANNER_TEST</key>
-        <string>ca-app-pub-3940256099942544/2934735716</string>
-        <key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
-        <string>ca-app-pub-3940256099942544/4411468910</string>
-        <key>CLIENT_ID</key>
-        <string>639553443473-3go6i4jf9mfusd3hq53f6vbuofrccodo.apps.googleusercontent.com</string>
-        <key>REVERSED_CLIENT_ID</key>
-        <string>com.googleusercontent.apps.639553443473-3go6i4jf9mfusd3hq53f6vbuofrccodo</string>
-        <key>API_KEY</key>
-        <string>AIzaSyAXkS-ACX8di87ITijNP-TjIWrfXYQtb2k</string>
-        <key>GCM_SENDER_ID</key>
-        <string>639553443473</string>
-        <key>PLIST_VERSION</key>
-        <string>1</string>
-        <key>BUNDLE_ID</key>
-        <string>com.seldatinc.DMSDriver</string>
-        <key>PROJECT_ID</key>
-        <string>sdms-staging</string>
-        <key>STORAGE_BUCKET</key>
-        <string>sdms-staging.appspot.com</string>
-        <key>IS_ADS_ENABLED</key>
-        <true></true>
-        <key>IS_ANALYTICS_ENABLED</key>
-        <false></false>
-        <key>IS_APPINVITE_ENABLED</key>
-        <false></false>
-        <key>IS_GCM_ENABLED</key>
-        <true></true>
-        <key>IS_SIGNIN_ENABLED</key>
-        <true></true>
-        <key>GOOGLE_APP_ID</key>
-        <string>1:639553443473:ios:5ad3fe401fd532f0</string>
-        <key>DATABASE_URL</key>
-        <string>https://sdms-staging.firebaseio.com</string>
-    </dict>
+<dict>
+	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
+	<string>ca-app-pub-3940256099942544/2934735716</string>
+	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
+	<string>ca-app-pub-3940256099942544/4411468910</string>
+	<key>CLIENT_ID</key>
+	<string>267528396420-5kuobo330jdl133ugp7hdlemq5ufipka.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.267528396420-5kuobo330jdl133ugp7hdlemq5ufipka</string>
+	<key>API_KEY</key>
+	<string>AIzaSyDmMkbA58-xuDxPz2bEwyJQaXYUEhiG7F8</string>
+	<key>GCM_SENDER_ID</key>
+	<string>267528396420</string>
+	<key>PLIST_VERSION</key>
+	<string>1</string>
+	<key>BUNDLE_ID</key>
+	<string>com.seldatinc.99centsdriver</string>
+	<key>PROJECT_ID</key>
+	<string>cents-7f8ff</string>
+	<key>STORAGE_BUCKET</key>
+	<string>cents-7f8ff.appspot.com</string>
+	<key>IS_ADS_ENABLED</key>
+	<true></true>
+	<key>IS_ANALYTICS_ENABLED</key>
+	<false></false>
+	<key>IS_APPINVITE_ENABLED</key>
+	<false></false>
+	<key>IS_GCM_ENABLED</key>
+	<true></true>
+	<key>IS_SIGNIN_ENABLED</key>
+	<true></true>
+	<key>GOOGLE_APP_ID</key>
+	<string>1:267528396420:ios:03c829586e817763</string>
+	<key>DATABASE_URL</key>
+	<string>https://cents-7f8ff.firebaseio.com</string>
+</dict>
 </plist>
