--- a/SRSDriver/Supporting Files/DMSDriver_Core/GoogleService-Info.plist
+++ b/SRSDriver/Supporting Files/DMSDriver_Core/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>267528396420-5kuobo330jdl133ugp7hdlemq5ufipka.apps.googleusercontent.com</string>
+	<string>617469428876-sqk10upts8r6nag5e3krs4flt59njbhh.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.267528396420-5kuobo330jdl133ugp7hdlemq5ufipka</string>
+	<string>com.googleusercontent.apps.617469428876-sqk10upts8r6nag5e3krs4flt59njbhh</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDmMkbA58-xuDxPz2bEwyJQaXYUEhiG7F8</string>
+	<string>AIzaSyAkhbWDdo9AsRF-AwApP84Iboptp8ezaNo</string>
 	<key>GCM_SENDER_ID</key>
-	<string>267528396420</string>
+	<string>617469428876</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.seldatinc.99centsdriver</string>
 	<key>PROJECT_ID</key>
-	<string>cents-7f8ff</string>
+	<string>cents-855ad</string>
 	<key>STORAGE_BUCKET</key>
-	<string>cents-7f8ff.appspot.com</string>
+	<string>cents-855ad.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:267528396420:ios:03c829586e817763</string>
+	<string>1:617469428876:ios:03c829586e817763</string>
 	<key>DATABASE_URL</key>
-	<string>https://cents-7f8ff.firebaseio.com</string>
+	<string>https://cents-855ad.firebaseio.com</string>
 </dict>
 </plist>
