--- a/SRSDriver/Supporting Files/DMSDriver_99Cents/MainConfigs.plist
+++ b/SRSDriver/Supporting Files/DMSDriver_99Cents/MainConfigs.plist
@@ -8,6 +8,8 @@
 	<string>https://apigw.seldatdirect.com/dev/dms/99cents/api</string>
 	<key>BASE_URL_GOOGLE_MAP</key>
 	<string>https://maps.googleapis.com/maps/api</string>
+	<key>BASE_URL_PRODUCT</key>
+	<string>https://apigw.seldatdirect.com/live/dms/99cents/api</string>
 	<key>TrackingTimeInterval</key>
 	<integer>60</integer>
 </dict>
