--- a/SRSDriver/Supporting Files/DMSDriver_99Cents/MainConfigs.plist
+++ b/SRSDriver/Supporting Files/DMSDriver_99Cents/MainConfigs.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BASE_URL</key>
-	<string>https://apigw.seldatdirect.com/dev/dms/99cents/api</string>
+	<string>https://apigw.seldatdirect.com/live/dms/99cents/api</string>
 	<key>BASE_URL_DEV</key>
 	<string>https://apigw.seldatdirect.com/dev/dms/99cents/api</string>
 	<key>BASE_URL_GOOGLE_MAP</key>
