--- a/SRSDriver/Supporting Files/DMSDriver_99Cents/GoogleService-Info.plist
+++ b/SRSDriver/Supporting Files/DMSDriver_99Cents/GoogleService-Info.plist
@@ -7,9 +7,9 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>617469428876-sqk10upts8r6nag5e3krs4flt59njbhh.apps.googleusercontent.com</string>
+	<string>617469428876-r1gc4aqfrqp5p4fim2fgsgnbb178u72n.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.617469428876-sqk10upts8r6nag5e3krs4flt59njbhh</string>
+	<string>com.googleusercontent.apps.617469428876-r1gc4aqfrqp5p4fim2fgsgnbb178u72n</string>
 	<key>API_KEY</key>
 	<string>AIzaSyAkhbWDdo9AsRF-AwApP84Iboptp8ezaNo</string>
 	<key>GCM_SENDER_ID</key>
@@ -17,7 +17,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.seldatinc.99centsdriver</string>
+	<string>com.seldatinc.99centsdriver.debug</string>
 	<key>PROJECT_ID</key>
 	<string>cents-855ad</string>
 	<key>STORAGE_BUCKET</key>
@@ -33,7 +33,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:617469428876:ios:03c829586e817763</string>
+	<string>1:617469428876:ios:4da4ed88b752b03a</string>
 	<key>DATABASE_URL</key>
 	<string>https://cents-855ad.firebaseio.com</string>
 </dict>
