[DirectMail] update localization in Login Screen

--- a/DMSDriver/DMSDriver/Supporting Files/Service/GoogleService-Info.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>617469428876-r1gc4aqfrqp5p4fim2fgsgnbb178u72n.apps.googleusercontent.com</string>
+	<string>658501017557-3f7fglajo4ejqa0q3beijsq7olilcjgb.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.617469428876-r1gc4aqfrqp5p4fim2fgsgnbb178u72n</string>
+	<string>com.googleusercontent.apps.658501017557-3f7fglajo4ejqa0q3beijsq7olilcjgb</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAkhbWDdo9AsRF-AwApP84Iboptp8ezaNo</string>
+	<string>AIzaSyDldOUOSvRR6qaKQJA6GSiy6o43sb-7qpU</string>
 	<key>GCM_SENDER_ID</key>
-	<string>617469428876</string>
+	<string>658501017557</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.seldatinc.99centsdriver.debug</string>
+	<string>com.seldatinc.dms.directmail</string>
 	<key>PROJECT_ID</key>
-	<string>cents-855ad</string>
+	<string>directmail-dev</string>
 	<key>STORAGE_BUCKET</key>
-	<string>cents-855ad.appspot.com</string>
+	<string>directmail-dev.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:617469428876:ios:4da4ed88b752b03a</string>
+	<string>1:658501017557:ios:57d84ce2d9c82b00</string>
 	<key>DATABASE_URL</key>
-	<string>https://cents-855ad.firebaseio.com</string>
+	<string>https://directmail-dev.firebaseio.com</string>
 </dict>
 </plist>
