--- a/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
@@ -5,7 +5,7 @@
 	<key>BASE_URL</key>
 	<string>https://apigw.seldatdirect.com/live/dms/99cents/api</string>
 	<key>BASE_URL_DEV</key>
-	<string>https://apigw.seldatdirect.com/dev/dms/99cents/api</string>
+	<string>https://apigw.seldatdirect.com/dev/dms/directmail/api</string>
 	<key>BASE_URL_GOOGLE_MAP</key>
 	<string>https://maps.googleapis.com/maps/api</string>
 	<key>BASE_URL_PRODUCT</key>
