--- a/DMSDriver/DMSDriver/Supporting Files/Configurations/Debug.xcconfig
+++ b/DMSDriver/DMSDriver/Supporting Files/Configurations/Debug.xcconfig
@@ -2,7 +2,7 @@
 #include "Base.xcconfig"
 
 // User-Defined
-APP_NAME = Direct Mail
+APP_NAME = DirectMail Debug
 BUILD_SCHEME = Debug
 SERVER = testing
 APP_BUNDLE_ID = com.seldatinc.99centsdriver.debug
