--- a/DMSDriver/DMSDriver/Supporting Files/Service/GoogleService-Info.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/GoogleService-Info.plist
@@ -7,9 +7,9 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>658501017557-3f7fglajo4ejqa0q3beijsq7olilcjgb.apps.googleusercontent.com</string>
+	<string>658501017557-49sqfopfsneskemlfcc9csr4hjvkvt1k.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.658501017557-3f7fglajo4ejqa0q3beijsq7olilcjgb</string>
+	<string>com.googleusercontent.apps.658501017557-49sqfopfsneskemlfcc9csr4hjvkvt1k</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDldOUOSvRR6qaKQJA6GSiy6o43sb-7qpU</string>
 	<key>GCM_SENDER_ID</key>
@@ -17,23 +17,23 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.seldatinc.dms.directmail</string>
+	<string>com.seldatinc.directmail.debug</string>
 	<key>PROJECT_ID</key>
 	<string>directmail-dev</string>
 	<key>STORAGE_BUCKET</key>
 	<string>directmail-dev.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:658501017557:ios:57d84ce2d9c82b00</string>
+	<string>1:658501017557:ios:026c4668d707ebe9</string>
 	<key>DATABASE_URL</key>
 	<string>https://directmail-dev.firebaseio.com</string>
 </dict>
