--- a/DMSDriver/DMSDriver/Supporting Files/Configurations/Base.xcconfig
+++ b/DMSDriver/DMSDriver/Supporting Files/Configurations/Base.xcconfig
@@ -2,7 +2,7 @@
 // User-Defined
 APP_NAME = Direct Mail
 APP_VERSION = 1.0
-APP_BUNDLE_VERSION = 1
-APP_BUNDLE_ID = com.seldatinc.99centsdriver
+APP_BUNDLE_VERSION = 2
+APP_BUNDLE_ID = com.seldatinc.directmail
 SERVER = development
 
