--- a/DMSDriver/DMSDriver/Supporting Files/Configurations/Debug.xcconfig
+++ b/DMSDriver/DMSDriver/Supporting Files/Configurations/Debug.xcconfig
@@ -5,4 +5,4 @@
 APP_NAME = DirectMail Debug
 BUILD_SCHEME = Debug
 SERVER = testing
-APP_BUNDLE_ID = com.seldatinc.99centsdriver.debug
+APP_BUNDLE_ID = com.seldatinc.directmail.debug
