--- a/DMSDriver/DMSDriver/Supporting Files/Service/GoogleService-Info-prod.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/GoogleService-Info-prod.plist
@@ -7,34 +7,34 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>559647254340-utbk1cgpcmpqiq1hmdk0kmlumo2h28ir.apps.googleusercontent.com</string>
+	<string>457132314338-fjkavgadr5e6jglpj661v2rm7ued36eg.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.559647254340-utbk1cgpcmpqiq1hmdk0kmlumo2h28ir</string>
+	<string>com.googleusercontent.apps.457132314338-fjkavgadr5e6jglpj661v2rm7ued36eg</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDpdnQmZM4YEXxSEmXOW-2I5cpY32gBSw4</string>
+	<string>AIzaSyDV2uNetDmPSocX5vqMJ949T4_DPwhgCsM</string>
 	<key>GCM_SENDER_ID</key>
-	<string>559647254340</string>
+	<string>457132314338</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.seldatinc.99centsdriver</string>
+	<string>com.seldatinc.directmail</string>
 	<key>PROJECT_ID</key>
-	<string>cents-prod-21a7f</string>
+	<string>directmail-prod</string>
 	<key>STORAGE_BUCKET</key>
-	<string>cents-prod-21a7f.appspot.com</string>
+	<string>directmail-prod.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false/>
+	<false></false>
 	<key>IS_GCM_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
+	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:559647254340:ios:03c829586e817763</string>
+	<string>1:457132314338:ios:05a78ebfcd0913c7</string>
 	<key>DATABASE_URL</key>
-	<string>https://cents-prod-21a7f.firebaseio.com</string>
+	<string>https://directmail-prod.firebaseio.com</string>
 </dict>
 </plist>
