--- a/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/DMSDriver.xcscheme
+++ b/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/DMSDriver.xcscheme
@@ -70,7 +70,7 @@
          <EnvironmentVariable
             key = "SERVER"
             value = "https://apigw.seldatdirect.com/live/dms/directmail/api"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
       <AdditionalOptions>
