[DirectMail] - update constraint

--- a/DMSDriver/Podfile
+++ b/DMSDriver/Podfile
@@ -7,7 +7,6 @@ target 'DMSDriver' do
 
   	pod 'GoogleMaps', '2.5.0'	
 	pod 'ObjectMapper'
-	pod 'RealmSwift'
 	pod 'Alamofire'
 	pod 'XLPagerTabStrip'
 	pod 'IQKeyboardManager'
@@ -16,6 +15,14 @@ target 'DMSDriver' do
  	pod 'SDWebImage'
   	pod 'Firebase/Core'
  	pod 'Firebase/Messaging'
-    pod 'SideMenu'
+        pod 'SideMenu'
 
+end
+
+# Workaround for Cocoapods issue #7606
+post_install do |installer|
+    installer.pods_project.build_configurations.each do |config|
+        config.build_settings.delete('CODE_SIGNING_ALLOWED')
+        config.build_settings.delete('CODE_SIGNING_REQUIRED')
+    end
 end
