--- a/DMSDriver/Podfile
+++ b/DMSDriver/Podfile
@@ -1,11 +1,11 @@
 # Uncomment the next line to define a global platform for your project
-  platform :ios, '9.0'
-
+ platform :ios, '9.0'
+ use_frameworks!
 target 'DMSDriver' do
 
   # Pods for DMSDriver
 
-  	pod 'GoogleMaps', '2.5.0'	
+  	pod 'GoogleMaps'	
 	pod 'ObjectMapper'
 	pod 'Alamofire'
 	pod 'XLPagerTabStrip'
