[DirectMail] - Update phase 2

--- a/DMSDriver/DMSDriver/Supporting Files/GlobalServices/ServicesConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/GlobalServices/ServicesConfigs.plist
@@ -66,5 +66,7 @@
 	<string>/auth/v1/user/profile</string>
 	<key>UPDATE_USER_PROFILE</key>
 	<string>/auth/v1/user/profile</string>
+	<key>GET_DRIVER_BY_COORDINATOR</key>
+	<string>/backend-api/v1/users/get-driver-by-coordinator</string>
 </dict>
 </plist>
