--- a/DMSDriver/DMSDriver/Supporting Files/GlobalServices/ServicesConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/GlobalServices/ServicesConfigs.plist
@@ -68,5 +68,7 @@
 	<string>/auth/v1/user/profile</string>
 	<key>GET_DRIVER_BY_COORDINATOR</key>
 	<string>/backend-api/v1/users/get-driver-by-coordinator</string>
+	<key>GET_ORDER_BY_COORDINATOR</key>
+	<string>/backend-api/v1/orders/all-order-by-coordinator</string>
 </dict>
 </plist>
