--- a/DMSDriver/DMSDriver/Supporting Files/GlobalServices/ServicesConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/GlobalServices/ServicesConfigs.plist
@@ -70,5 +70,7 @@
 	<string>/backend-api/v1/users/get-driver-by-coordinator</string>
 	<key>GET_ORDER_BY_COORDINATOR</key>
 	<string>/backend-api/v1/orders/all-order-by-coordinator</string>
+	<key>GET_ROUTE_BY_COORDINATOR</key>
+	<string>/backend-api/v1/routes/all-route-by-coordinator</string>
 </dict>
 </plist>
