[Map] - fix https://seldat.atlassian.net/browse/DIR-111

--- a/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
@@ -6,6 +6,8 @@
 	<string>https://apigw.seldatdirect.com/dev/dms/directmail/api</string>
 	<key>BASE_URL_DEV</key>
 	<string>https://apigw.seldatdirect.com/dev/dms/directmail/api</string>
+	<key>BASE_URL_STAGING</key>
+	<string>https://apigw2.seldatdirect.com/staging/directmail/dms/api</string>
 	<key>BASE_URL_GOOGLE_MAP</key>
 	<string>https://maps.googleapis.com/maps/api</string>
 	<key>BASE_URL_PRODUCT</key>
