--- a/DMSDriver/DMSDriver/Supporting Files/Info.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Info.plist
@@ -42,6 +42,8 @@
 	<string>$(SERVER)</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
+		<string>fetch</string>
 		<string>location</string>
 		<string>remote-notification</string>
 	</array>
