--- a/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
@@ -13,6 +13,8 @@
 	<key>BASE_URL_PRODUCT</key>
 	<string>https://apigw.seldatdirect.com/live/dms/directmail/api</string>
 	<key>TrackingTimeInterval</key>
-	<integer>60</integer>
+	<integer>5</integer>
+	<key>ReloadRouteTimeInterval</key>
+	<integer>30</integer>
 </dict>
 </plist>
