[Gadot] *RouteList* update UI

--- a/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/DMSDriver.xcscheme
+++ b/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/DMSDriver.xcscheme
@@ -64,17 +64,17 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "SERVER"
-            value = "https://apigw.seldatdirect.com/dev/dms/gadot/"
+            value = "https://apigw.seldatdirect.com/dev/dms/gadot/api/"
             isEnabled = "YES">
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "SERVER"
-            value = "https://apigw.seldatdirect.com/dev/dms/gadot/"
+            value = "https://apigw.seldatdirect.com/dev/dms/gadot/api/"
             isEnabled = "NO">
          </EnvironmentVariable>
          <EnvironmentVariable
             key = "SERVER"
-            value = "https://apigw.seldatdirect.com/dev/dms/gadot/"
+            value = "https://apigw.seldatdirect.com/dev/dms/gadot/api/"
             isEnabled = "NO">
          </EnvironmentVariable>
       </EnvironmentVariables>
