--- a/DMSDriver/DMSDriver/Supporting Files/GlobalServices/ServicesConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/GlobalServices/ServicesConfigs.plist
@@ -3,82 +3,82 @@
 <plist version="1.0">
 <dict>
 	<key>LOGIN</key>
-	<string>api/auth/v1/login</string>
+	<string>auth/v1/login</string>
 	<key>FORGET_PASSWORD</key>
-	<string>/auth/v1/user/forgot-password</string>
+	<string>auth/v1/user/forgot-password</string>
 	<key>LOGOUT</key>
-	<string>/auth/v1/user/logout</string>
+	<string>auth/v1/user/logout</string>
 	<key>GET_ORDERS</key>
-	<string>/backend-api/driver/v1/orders</string>
+	<string>backend-api/driver/v1/orders</string>
 	<key>GET_ORDER_BY_DATE</key>
-	<string>/backend-api/v1/routes/get-routes-by-date</string>
+	<string>backend-api/v1/routes/get-routes-by-date</string>
 	<key>GET_ROUTES_BY_DATE</key>
 	<string>transaction/v1/routes/by-driver/%@?date=%@</string>
 	<key>GET_PACKAGES_IN_ROUTE</key>
-	<string>/backend-api/v1/routes/get-packages-by-driver?id=%@&amp;date=%@</string>
+	<string>backend-api/v1/routes/get-packages-by-driver?id=%@&amp;date=%@</string>
 	<key>GET_ORDER_DETAIL</key>
-	<string>/backend-api/v1/orders/%@</string>
+	<string>backend-api/v1/orders/%@</string>
 	<key>UPDATE_ORDER_STATUS</key>
-	<string>/backend-api/v1/orders/%@/%@</string>
+	<string>backend-api/v1/orders/%@/%@</string>
 	<key>UPLOAD_SIGNATURE</key>
-	<string>/backend-api/v1/orders/add-sign/%@</string>
+	<string>backend-api/v1/orders/add-sign/%@</string>
 	<key>UPDATE_SEQUENCE</key>
-	<string>/backend-api/v1/routes/update-sequence</string>
+	<string>backend-api/v1/routes/update-sequence</string>
 	<key>UPLOAD_FILES</key>
-	<string>/backend-api/v1/orders/add-picture/%@</string>
+	<string>backend-api/v1/orders/add-picture/%@</string>
 	<key>GET_REASON_LIST</key>
-	<string>/backend-api/v1/reason/%@</string>
+	<string>backend-api/v1/reason/%@</string>
 	<key>ADD_NOTE</key>
-	<string>/backend-api/v1/orders/%@/notes</string>
+	<string>backend-api/v1/orders/%@/notes</string>
 	<key>UPDATE_ORDER_ITEM_STATUS</key>
-	<string>/backend-api/v1/orders/update-status-items/%@/%@</string>
+	<string>backend-api/v1/orders/update-status-items/%@/%@</string>
 	<key>UPDATE_BARCODE_ORDER_ITEM</key>
-	<string>/backend-api/v1/orders/update-barcode-items/%@</string>
+	<string>backend-api/v1/orders/update-barcode-items/%@</string>
 	<key>ADD_NEW_ORDER_ITEM</key>
-	<string>/backend-api/v1/mobile/orders/%@/items</string>
+	<string>backend-api/v1/mobile/orders/%@/items</string>
 	<key>UPDATE_TOKEN_FCM</key>
-	<string>/backend-api/v1/notificationtokens/notification</string>
+	<string>backend-api/v1/notificationtokens/notification</string>
 	<key>CREATE_NEW_MESSAGE</key>
-	<string>/backend-api/v1/messages</string>
+	<string>backend-api/v1/messages</string>
 	<key>GET_COUNT_MESSAGE_NUMBER</key>
-	<string>/backend-api/v1/messages/count-message?type_message=%@&amp;route_id=%@</string>
+	<string>backend-api/v1/messages/count-message?type_message=%@&amp;route_id=%@</string>
 	<key>GET_LIST_NOTIFICATIONS</key>
-	<string>/backend-api/v1/messages/list-message?page=1&amp;limit=100&amp;route_id=%@</string>
+	<string>backend-api/v1/messages/list-message?page=1&amp;limit=100&amp;route_id=%@</string>
 	<key>GET_ROUTE_DETAIL</key>
 	<string>transaction/v1/routes/%@</string>
 	<key>READ_MESSAGE</key>
-	<string>/backend-api/v1/messages/%@</string>
+	<string>backend-api/v1/messages/%@</string>
 	<key>CHECK_TOKEN</key>
-	<string>/authentication/users/token</string>
+	<string>authentication/users/token</string>
 	<key>CHANGE_PASSWORD</key>
-	<string>/auth/v1/user/change-password</string>
+	<string>auth/v1/user/change-password</string>
 	<key>RESET_PASSWORD_URL</key>
-	<string>/#/reset-password</string>
+	<string>#/reset-password</string>
 	<key>GET_ALERT_DETAIL</key>
-	<string>/backend-api/v1/alert/my-list</string>
+	<string>backend-api/v1/alert/my-list</string>
 	<key>RESOLVE_ALERT</key>
-	<string>/backend-api/v1/alert-management/%@?comment=%@</string>
+	<string>backend-api/v1/alert-management/%@?comment=%@</string>
 	<key>UPDATE_DRIVER_LOCATION</key>
-	<string>/gps-tracking/update-driver-loc</string>
+	<string>gps-tracking/update-driver-loc</string>
 	<key>GET_USERID_BY_TOKEN</key>
-	<string>/authentication/users/token</string>
+	<string>authentication/users/token</string>
 	<key>GET_USER_PROFILE</key>
-	<string>/auth/v1/user/profile</string>
+	<string>auth/v1/user/profile</string>
 	<key>UPDATE_USER_PROFILE</key>
-	<string>/auth/v1/user/profile</string>
+	<string>auth/v1/user/profile</string>
 	<key>GET_DRIVER_BY_COORDINATOR</key>
-	<string>/backend-api/v1/users/get-driver-by-coordinator</string>
+	<string>backend-api/v1/users/get-driver-by-coordinator</string>
 	<key>GET_ORDER_BY_COORDINATOR</key>
-	<string>/backend-api/v1/orders/all-order-by-coordinator?date=%@</string>
+	<string>backend-api/v1/orders/all-order-by-coordinator?date=%@</string>
 	<key>GET_ROUTE_BY_COORDINATOR</key>
-	<string>/backend-api/v1/routes/all-route-by-coordinator?date=%@</string>
+	<string>backend-api/v1/routes/all-route-by-coordinator?date=%@</string>
 	<key>ASSIGN_ORDER</key>
-	<string>/backend-api/v1/orders/assign-order</string>
+	<string>backend-api/v1/orders/assign-order</string>
 	<key>GET_LIST_TASKS</key>
-	<string>/backend-api/v1/tasks/driver-task?from_delivery_date=%@&amp;to_delivery_date=%@</string>
+	<string>backend-api/v1/tasks/driver-task?from_delivery_date=%@&amp;to_delivery_date=%@</string>
 	<key>GET_TASK_DETAIL</key>
-	<string>/backend-api/v1/tasks/%@</string>
+	<string>backend-api/v1/tasks/%@</string>
 	<key>UPDATE_STATUS_TASK</key>
-	<string>/backend-api/v1/tasks/%@/%@</string>
+	<string>backend-api/v1/tasks/%@/%@</string>
 </dict>
 </plist>
