[OrderDetail] update upload photo into an order

--- a/DMSDriver/DMSDriver/Supporting Files/GlobalServices/ServicesConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/GlobalServices/ServicesConfigs.plist
@@ -21,7 +21,7 @@
 	<key>UPDATE_ORDER_STATUS</key>
 	<string>transaction/v1/orders/%@/%@</string>
 	<key>UPLOAD_SIGNATURE</key>
-	<string>transaction/v1/orders/%@/%@</string>
+	<string>transaction/v1/orders/%@</string>
 	<key>UPDATE_SEQUENCE</key>
 	<string>backend-api/v1/routes/update-sequence</string>
 	<key>UPLOAD_FILES</key>
