[Gadot] Done orderDetail feature

--- a/DMSDriver/DMSDriver/Supporting Files/GlobalServices/ServicesConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/GlobalServices/ServicesConfigs.plist
@@ -17,7 +17,7 @@
 	<key>GET_PACKAGES_IN_ROUTE</key>
 	<string>backend-api/v1/routes/get-packages-by-driver?id=%@&amp;date=%@</string>
 	<key>GET_ORDER_DETAIL</key>
-	<string>backend-api/v1/orders/%@</string>
+	<string>transaction/v1/orders/%@</string>
 	<key>UPDATE_ORDER_STATUS</key>
 	<string>transaction/v1/orders/%@/%@</string>
 	<key>UPLOAD_SIGNATURE</key>
