--- a/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
@@ -15,6 +15,8 @@
 	<key>TrackingTimeInterval</key>
 	<integer>60</integer>
 	<key>ReloadRouteTimeInterval</key>
-	<real>1000000000</real>
+	<integer>60</integer>
+	<key>AutoRefetchRouteList</key>
+	<false/>
 </dict>
 </plist>
