--- a/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
@@ -7,7 +7,7 @@
 	<key>BASE_URL_DEV</key>
 	<string>https://apigw.seldatdirect.com/dev/dms/gadot/api/</string>
 	<key>BASE_URL_STAGING</key>
-	<string>https://apigw.seldatdirect.com/dev/dms/gadot/api/</string>
+	<string>https://apigw.seldatdirect.com/demo/dms/gadot/api/</string>
 	<key>BASE_URL_GOOGLE_MAP</key>
 	<string>https://maps.googleapis.com/maps/api</string>
 	<key>BASE_URL_PRODUCT</key>
