--- a/DMSDriver/Podfile
+++ b/DMSDriver/Podfile
@@ -20,6 +20,7 @@ target 'DMSDriver' do
     pod 'SideMenu', '~> 4.0.0'
     pod 'ReachabilitySwift', '~> 3'
     pod 'Socket.IO-Client-Swift', '~> 13.3.0'
+    pod 'FDFullscreenPopGesture', '1.1'
 
 end
 
