--- a/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
@@ -11,7 +11,7 @@
 	<key>BASE_URL_GOOGLE_MAP</key>
 	<string>https://maps.googleapis.com/maps/api</string>
 	<key>BASE_URL_PRODUCT</key>
-	<string>https://apigw.seldatdirect.com/dev/dms/gadot/api/</string>
+	<string>https://apigw.seldatdirect.com/demo/dms/gadot/api/</string>
 	<key>TrackingTimeInterval</key>
 	<integer>60</integer>
 	<key>ReloadRouteTimeInterval</key>
