[LocationTracker] - Add require location when distence > a

--- a/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
@@ -18,5 +18,7 @@
 	<integer>60</integer>
 	<key>AutoRefetchRouteList</key>
 	<false/>
+	<key>DistanceSubmitLocation</key>
+	<integer>50</integer>
 </dict>
 </plist>
