[DMS-Customization] * Updated the NavigationBar* + *Updated the Profile screen*

--- a/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
@@ -3,15 +3,15 @@
 <plist version="1.0">
 <dict>
 	<key>BASE_URL</key>
-	<string>https://apigw.seldatdirect.com/dev/dms/gadot/api/</string>
+	<string>https://apigw2.seldatdirect.com/dev/dms-customization/api/</string>
 	<key>BASE_URL_DEV</key>
-	<string>https://apigw.seldatdirect.com/dev/dms/gadot/api/</string>
+	<string>https://apigw2.seldatdirect.com/dev/dms-customization/api/</string>
 	<key>BASE_URL_STAGING</key>
-	<string>https://apigw.seldatdirect.com/demo/dms/gadot/api/</string>
+	<string>https://apigw2.seldatdirect.com/dev/dms-customization/api/</string>
 	<key>BASE_URL_GOOGLE_MAP</key>
 	<string>https://maps.googleapis.com/maps/api</string>
 	<key>BASE_URL_PRODUCT</key>
-	<string>https://apigw.seldatdirect.com/demo/dms/gadot/api/</string>
+	<string>https://apigw2.seldatdirect.com/dev/dms-customization/api/</string>
 	<key>TrackingTimeInterval</key>
 	<integer>60</integer>
 	<key>ReloadRouteTimeInterval</key>
