--- a/DMSDriver/DMSDriver/Supporting Files/GlobalServices/ServicesConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/GlobalServices/ServicesConfigs.plist
@@ -19,9 +19,9 @@
 	<key>GET_ORDER_DETAIL</key>
 	<string>transaction/v1/orders/%@</string>
 	<key>UPDATE_ORDER_STATUS</key>
-	<string>transaction/v1/orders/%@/%@</string>
+	<string>transaction/v1/mobile/orders/%@/%@</string>
 	<key>UPLOAD_SIGNATURE</key>
-	<string>transaction/v1/orders/%@/%@</string>
+	<string>transaction/v1/mobile/orders/%@/%@</string>
 	<key>UPDATE_SEQUENCE</key>
 	<string>backend-api/v1/routes/update-sequence</string>
 	<key>UPLOAD_FILES</key>
