[DMS-Customization] *Refactor code*

--- a/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/DMSDriver.xcscheme
+++ b/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/DMSDriver.xcscheme
@@ -63,21 +63,6 @@
       </BuildableProductRunnable>
       <EnvironmentVariables>
          <EnvironmentVariable
-            key = "SERVER"
-            value = "https://apigw2.seldatdirect.com/dev/dms-customization/api/"
-            isEnabled = "NO">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "SERVER"
-            value = "https://apigw2.seldatdirect.com/dev/dms-customization/api/"
-            isEnabled = "NO">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "SERVER"
-            value = "https://apigw2.seldatdirect.com/dev/dms-customization/api/"
-            isEnabled = "NO">
-         </EnvironmentVariable>
-         <EnvironmentVariable
             key = "DYLD_PRINT_STATISTICS"
             value = "1"
             isEnabled = "NO">
@@ -117,7 +102,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
