--- a/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/DMSDriver Staging copy.xcscheme
+++ b/DMSDriver/DMSDriver.xcodeproj/xcshareddata/xcschemes/DMSDriver Staging copy.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1000"
+   LastUpgradeVersion = "1020"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-               BuildableName = "DMSDriver.app"
-               BlueprintName = "DMSDriver"
+               BlueprintIdentifier = "2A4438C822642CFF00CB6508"
+               BuildableName = "DMSDriver Production.app"
+               BlueprintName = "DMSDriver Production"
                ReferencedContainer = "container:DMSDriver.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,9 +32,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-            BuildableName = "DMSDriver.app"
-            BlueprintName = "DMSDriver"
+            BlueprintIdentifier = "2A4438C822642CFF00CB6508"
+            BuildableName = "DMSDriver Production.app"
+            BlueprintName = "DMSDriver Production"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -55,40 +55,13 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-            BuildableName = "DMSDriver.app"
-            BlueprintName = "DMSDriver"
+            BlueprintIdentifier = "2A4438C822642CFF00CB6508"
+            BuildableName = "DMSDriver Production.app"
+            BlueprintName = "DMSDriver Production"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <EnvironmentVariables>
-         <EnvironmentVariable
-            key = "DYLD_PRINT_STATISTICS"
-            value = "1"
-            isEnabled = "NO">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "DISABLE_API_LOG"
-            value = "false"
-            isEnabled = "NO">
-         </EnvironmentVariable>
-         <EnvironmentVariable
-            key = "SERVER"
-            value = "https://apigw2.seldatdirect.com/dev/dms-customization/api/"
-            isEnabled = "NO">
-         </EnvironmentVariable>
-      </EnvironmentVariables>
       <AdditionalOptions>
-         <AdditionalOption
-            key = "MallocStackLogging"
-            value = ""
-            isEnabled = "YES">
-         </AdditionalOption>
-         <AdditionalOption
-            key = "PrefersMallocStackLoggingLite"
-            value = ""
-            isEnabled = "YES">
-         </AdditionalOption>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
@@ -101,9 +74,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3B66B74C210B1051000BDFEF"
-            BuildableName = "DMSDriver.app"
-            BlueprintName = "DMSDriver"
+            BlueprintIdentifier = "2A4438C822642CFF00CB6508"
+            BuildableName = "DMSDriver Production.app"
+            BlueprintName = "DMSDriver Production"
             ReferencedContainer = "container:DMSDriver.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
