[DMS-Customization] *Done https://seldat.atlassian.net/browse/SOLA1-40*

--- a/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/MainConfigs.plist
@@ -19,6 +19,6 @@
 	<key>DistanceSubmitLocation</key>
 	<integer>50</integer>
 	<key>UseChooseEnvironment</key>
-	<false/>
+	<true/>
 </dict>
 </plist>
