update firebase configuration

--- a/DMSDriver/DMSDriver/Supporting Files/Service/GoogleService-Info.plist
+++ b/DMSDriver/DMSDriver/Supporting Files/Service/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>916140123721-34kkbdjm1g7aml98l0794pmgin0g8h9r.apps.googleusercontent.com</string>
+	<string>529725101417-qk9qe68slktrq3a03eg872qgnk6sf353.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.916140123721-34kkbdjm1g7aml98l0794pmgin0g8h9r</string>
+	<string>com.googleusercontent.apps.529725101417-qk9qe68slktrq3a03eg872qgnk6sf353</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCSyjRuml_p5cDGE2AzE3ncYWUzo9Nu_rE</string>
+	<string>AIzaSyBJfixjfkhgTUqXq9vDgN9zRLAFXV5IGLg</string>
 	<key>GCM_SENDER_ID</key>
-	<string>916140123721</string>
+	<string>529725101417</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.seldatinc.dms.core</string>
 	<key>PROJECT_ID</key>
-	<string>dms-customization</string>
+	<string>solocate-dev-9cb2b</string>
 	<key>STORAGE_BUCKET</key>
-	<string>dms-customization.appspot.com</string>
+	<string>solocate-dev-9cb2b.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:916140123721:ios:16a73dddf5bbf381</string>
+	<string>1:529725101417:ios:16a73dddf5bbf381</string>
 	<key>DATABASE_URL</key>
-	<string>https://dms-customization.firebaseio.com</string>
+	<string>https://solocate-dev-9cb2b.firebaseio.com</string>
 </dict>
 </plist>
